test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-borrowed.good
assign-nonnil-owned-from-oknil-borrowed.chpl:8: error: Cannot assign to owned MyClass from borrowed MyClass?
